Major optimization changes. Bug fixes